@@ -3254,6 +3254,12 @@ Th+-------------------------------------------------------------------------+
 		    </row>
 
 		    <row>
+		      <entry><computeroutput>w</computeroutput></entry>
+		      <entry>-</entry>
+		      <entry>the package will be downgraded.</entry>
+		    </row>
+
+		    <row>
 		      <entry><computeroutput>d</computeroutput></entry>
 		      <entry>-</entry>
 		      <entry>
