@@ -121,6 +121,7 @@ versions of the package.
    i - install
    r - reinstall
    u - upgrade
+   w - downgrade
    F - the available upgrade has been forbidden via "F"
 
   If present, the "automatic" flag is "A", indicating that the package
